--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "good-gelf",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Gelf transformation for good logs.",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "tape test/*.js"
   },
