--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "good-gelf",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "Gelf transformation for good logs.",
   "main": "lib/index.js",
   "scripts": {
+    "pretest": "eslint lib test",
     "test": "tape test/*.js"
   },
   "repository": {
