--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "homepage": "https://github.com/jessie-codes/good-gelf#readme",
   "devDependencies": {
-    "eslint": "^4.0.0",
-    "tape": "^4.6.3"
+    "eslint": "4.3.0",
+    "tape": "4.8.0"
   },
   "dependencies": {
-    "fast-safe-stringify": "^1.2.0"
+    "fast-safe-stringify": "1.2.0"
   }
 }
