--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tape": "4.8.0"
   },
   "dependencies": {
-    "fast-safe-stringify": "1.2.0"
+    "fast-safe-stringify": "1.2.0",
+    "time-stamp": "^2.0.0"
   }
 }
