--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,13 @@ node_js:
   - "node"
   - "6"
   - "4"
+before_install:
+# package-lock.json was introduced in npm@5
+- npm install -g npm@5
+- npm install -g greenkeeper-lockfile@1
 install:
   - npm install
+before_script: greenkeeper-lockfile-update
 script:
   - npm test
+after_script: greenkeeper-lockfile-upload
