Fixing flatten function

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "fast-safe-stringify": "1.2.0",
-    "time-stamp": "^2.0.0"
+    "lodash.forown": "4.4.0",
+    "time-stamp": "2.0.0"
   }
 }
