--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "fast-safe-stringify": "1.2.0",
-    "lodash.forown": "4.4.0",
+    "flat": "4.0.0",
+    "lodash.mapkeys": "4.6.0",
     "time-stamp": "2.0.0"
   }
 }
