--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
   },
   "homepage": "https://github.com/jessie-codes/good-gelf#readme",
   "devDependencies": {
-    "eslint": "4.19.1",
-    "tape": "4.9.0"
+    "eslint": "^5.9.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "tape": "^4.9.1"
   },
   "dependencies": {
-    "fast-safe-stringify": "2.0.4",
-    "flat": "4.0.0",
-    "lodash.mapkeys": "4.6.0",
-    "time-stamp": "2.0.0"
+    "fast-safe-stringify": "^2.0.6",
+    "flat": "^4.1.0",
+    "lodash": "^4.17.11",
+    "time-stamp": "^2.2.0"
   }
 }
